<resources>
    <string name="app_name">Ndk Demo</string>
    <string name="jni_invoke">java调用jni方法</string>
    <string name="dynamic_register">函数动态注册</string>
    <string name="basic_type">java与jni基础数据类型转换</string>
    <string name="string_convert">java与jni字符串类型转换</string>
    <string name="reference_convert">java与jni引用类型转换</string>
    <string name="access_java_field">jni访问java类字段</string>
    <string name="access_java_method">jni访问java类方法</string>
    <string name="access_java_method_by_thread">jni子线程访问java类方法</string>
    <string name="access_java_constructor">jni访问java构造方法</string>
    <string name="reference_manage">jni引用类型管理</string>
    <string name="exception_manage">jni异常处理</string>
    <string name="create_thread">jni中线程的创建</string>
    <string name="thread_sync">jni中线程的同步</string>
    <string name="bitmap_operate">jni中Bitmap操作</string>
    <string name="click_me">CLICK ME</string>
    <string name="show_result">将在显示结果…</string>
    <string name="show_result2">将在显示结果2…</string>
    <string name="primitive_int">基础数据类型int</string>
    <string name="primitive_byte">基础数据类型byte</string>
    <string name="primitive_char">基础数据类型char</string>
    <string name="primitive_short">基础数据类型short</string>
    <string name="primitive_long">基础数据类型long</string>
    <string name="primitive_float">基础数据类型float</string>
    <string name="primitive_double">基础数据类型double</string>
    <string name="primitive_boolean">基础数据类型boolean</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="content_description_more">更多内容</string>
    <string name="content_description_search">搜索内容</string>
    <string name="java_jni_string">java与jni字符串转换</string>
    <string name="java_jni_string_method">测试jni字符串方法</string>
    <string name="access_static_field">访问静态字段</string>
    <string name="access_instance_field">访问实例字段</string>
    <string name="static_native_access_field">使用 static native 方法访问静态字段</string>
    <string name="call_instance_method">jni调用java实例方法</string>
    <string name="call_static_method">jni调用java静态方法</string>
    <string name="call_static_method2">jni调用java静态方法2</string>
    <string name="jni_native_callback">jni通过接口参数回调java方法</string>
    <string name="jni_thread_callback">jni子线程回调java主线程方法</string>
    <string name="jni_constructor">JNI访问java构造方法</string>
    <string name="jni_local_reference">JNI局部引用类型管理</string>
    <string name="jni_global_reference">JNI全局引用类型管理</string>
    <string name="jni_weak_reference">JNI弱引用类型管理</string>
    <string name="jni_exception">JNI异常处理</string>
    <string name="jni_create_thread">无参数启动线程</string>
    <string name="jni_create_thread_with_args">有参数启动线程</string>
    <string name="jni_join_thread">线程join操作</string>
    <string name="jni_thread_wait">JNI线程同步wait</string>
    <string name="jni_thread_notify">JNI线程同步notify</string>
    <string name="jni_product_and_consumer">生产者和消费者</string>
    <string name="test_pic">测试图片</string>

</resources>