<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".jni.JniWaitNotifyActivity">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/jni_thread_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jni_thread_wait" />

    <Button
        android:id="@+id/jni_thread_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jni_thread_notify" />

    <Button
        android:id="@+id/jni_product_and_consumer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jni_product_and_consumer" />
</LinearLayout>