<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".jni.JniAccessMethodActivity">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/call_instance_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_instance_method" />

    <Button
        android:id="@+id/call_static_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_static_method" />

    <Button
        android:id="@+id/call_static_method2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_static_method2" />
</LinearLayout>