<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".jni.JniAccessFieldActivity">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_result"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/access_static_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_static_field" />

    <Button
        android:id="@+id/access_instance_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_instance_field" />
</LinearLayout>